# gaston

./: README.md  gaston.yaml  pyproject.toml
gaston/: __init__.py  agent.py  cli.py  gitops.py  registry.py
gastown/: __init__.py  agent.py  cli.py  gitops.py  registry.py
